[tool.poetry]
name = "django_docusign"
version = "0.1.0"
description = ""
authors = ["tejasb <tejas@thesummitgrp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
psycopg2-binary = "^2.9.1"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.8.0"
docusign-esign = "^3.6.0"
django-utils-six = "^2.0"
django-environ = "^0.6.0"
PyJWT = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
